--- a/app.wxss
+++ b/app.wxss
@@ -7,4 +7,11 @@
   justify-content: space-between;
   padding: 200rpx 0;
   box-sizing: border-box;
-} 
+}
+
+/* 03_wxss */
+.title {
+  font-size: 30px;
+  color: red;
+  font-weight: 700;
+}
