--- a/pages/06_event/index.js.wxss
+++ b/pages/06_event/index.js.wxss
@@ -60,3 +60,39 @@
 }
 
 /* tab-control */
+
+
+
+
+/* 6.事件的捕获与冒泡 */
+
+.v1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 600rpx;
+  height: 600rpx;
+  background-color: orange;
+}
+
+.v2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 400rpx;
+  height: 400rpx;
+  background-color: purple;
+}
+
+.v3 {
+  width: 200rpx;
+  height: 200rpx;
+  background-color: red;
+}
+
+
+/* 通过mark传递数据 */
+.mark {
+  height: 100rpx;
+  background-color: aquamarine;
+}
