--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -2,6 +2,6 @@
 <view class="pages">
   <block wx:for="{{pages}}" wx:key="name">
     <!-- data-*   自定义属性 -->
-    <button type="primary" bindtap="onBtnClick" data-item="{{item}}">{{item.name}}</button>
+    <button class="btn" type="primary" bindtap="onBtnClick" data-item="{{item}}">{{item.name}}</button>
   </block>
 </view>
