--- a/pages/08_slot/index.js.wxml
+++ b/pages/08_slot/index.js.wxml
@@ -14,7 +14,7 @@
 </my-slot>
 
 <my-slot>
-  <video src="https://www.bilibili.com/video/BV1x7411L7Q7/?spm_id_from=333.999.0.0&vd_source=122134a5c77ca12ff31b84b5b48e1a11" autoplay />
+  <video src="http://vodkgeyttp8.vod.126.net/cloudmusic/MjQ3NDQ3MjUw/89a6a279dc2acfcd068b45ce72b1f560/533e4183a709699d566180ed0cd9abe9.mp4?wsSecret=316203de1281ab5e41daf9bef0924076&wsTime=1679146259" autoplay />
 </my-slot>
 
 <view>
