--- a/pages/11_API_navigate/index.js.wxml
+++ b/pages/11_API_navigate/index.js.wxml
@@ -15,3 +15,8 @@
 <view> -------------------- 3. 组件/导航/navigator</view>
 <!-- 组件/导航/navigator -->
 <navigator url="/pages2/detail/detail" style="background-color: chartreuse;">跳转到detail</navigator>
+
+<view> ---4.页面通过 emit 一个事件回调 向另个页面 传递数据</view>
+<view>
+	{{123}}
+</view>
